# marduk

./: .gitignore  Cargo.toml  build.rs  default.nix  marduk.nix  shell.nix
benches/: load_lift.rs
mycroft/: constraints.my  context.my  defs.my  flow.my  fmt_str.my  fun_effect.my  live.my  load.my  queries.my  rules.my  schema.my  steensgaard.my  uaf.my  uaf_flow.my  uaf_pathlen.my  undef_entry.my
samples/: init.bash
samples/Juliet-1.3/: .gitignore
samples/Juliet-1.3/C/: create_per_cwe_files.py
samples/Juliet-1.3/C/testcases/CWE114_Process_Control/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE123_Write_What_Where_Condition/: Makefile  main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE15_External_Control_of_System_or_Configuration_Setting/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE176_Improper_Handling_of_Unicode_Encoding/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE188_Reliance_on_Data_Memory_Layout/: Makefile  main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE196_Unsigned_to_Signed_Conversion_Error/: Makefile  main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE222_Truncation_of_Security_Relevant_Information/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE223_Omission_of_Security_Relevant_Information/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE226_Sensitive_Information_Uncleared_Before_Release/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE242_Use_of_Inherently_Dangerous_Function/: Makefile  main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE244_Heap_Inspection/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE247_Reliance_on_DNS_Lookups_in_Security_Decision/: main.cpp  testcases.h
samples/Juliet-1.3/C/testcases/CWE327_Use_Broken_Crypto/: main.cpp  (+1 more)
samples/artificial/: .gitignore  Makefile  external.c  field_overwrite.c  func.c  link.c  ll.c  loop.c  path_sensitive.c  recurse.c  reloop.c  remalloc.c  restale.c  safe.c  seq_call.S  simple.c  undef_edge.c  undef_stack.c
samples/whole/: LICENSE  bsdcpio_test  gnome-nettool  goaccess  isisd  mdadm  ospf6d  ss-server
src/: avar.rs  constraints.rs  context.rs  datalog.rs  effect.rs  flow.rs  fmt_str.rs  funcs.rs  interned_string.rs  lib.rs  live.rs  load.rs  points_to.rs  printers.rs  regs.rs  steensgaard.rs  uaf.rs  use_def.rs  var.rs
src/constraints/: datalog.rs  generation.rs  mod.rs
tests/: artificial-steens.rs  artificial.rs  chop-flow.rs  steens.rs  whole-insensitive.rs  whole.rs
(+581 files in other folders)
