[package]
name = "marduk"
version = "0.0.1"
authors = ["Matthew Maurer <matthew.r.maurer@gmail.com>"]
include = [
  "mycroft/*",
  "build.rs",
  "src/*.rs",
  "src/**/*.rs",
  "Cargo.toml"
]
description = "A use-after-free detector for compiled code built on mycroft"
repository = "https://github.com/maurer/marduk"
license = "MIT"

[dependencies]
num-traits = "0.2"
mktemp = "0.3"
log = "0.4"
env_logger = "0.5"
lazy_static = "1.0"
bap = "0.1"
jemalloc-ctl = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.32"

[dependencies.mycroft]
git = "https://github.com/maurer/mycroft.git"

[dependencies.mycroft-support]
git = "https://github.com/maurer/mycroft.git"

[dependencies.mycroft-macros]
git = "https://github.com/maurer/mycroft.git"

[profile.release]
debug = true
